refactor: code level changes for deprecated config apis